--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-aadhar-card",
-  "version": "1.1.1",
+  "version": "1.1.3",
   "description": "A slick aadhar card component for React.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -15,6 +15,14 @@
     "url": "https://github.com/gaurangkeluskar22/React-Aadhar-Card"
   },
   "homepage": "https://github.com/gaurangkeluskar22/React-Aadhar-Card",
+  "keywords": [
+    "Aadhar card",
+    "React",
+    "Library",
+    "Aadhar card component",
+    "UIDAI card",
+    "package"
+  ],
   "license": "ISC",
   "devDependencies": {
     "react": "^18.3.1",
