--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-aadhar-card",
-  "version": "1.1.5",
+  "version": "1.1.7",
   "description": "A slick aadhar card component for React.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -27,9 +27,7 @@
   "devDependencies": {
     "react": "^18.3.1",
     "tslib": "^2.7.0",
-    "typescript": "^5.6.3"
-  },
-  "dependencies": {
+    "typescript": "^5.6.3",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.4",
@@ -39,5 +37,7 @@
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2"
+  },
+  "dependencies": {
   }
 }
